# riptide

./: Cargo.toml  README.md
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: allocator.rs  gdt.rs  interrupts.rs  main.rs  memory.rs  panic.rs  vga.rs
kernel/src/device/: block.rs  char.rs  mod.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/block/: floppy.rs  mod.rs  ram.rs
kernel/src/drivers/char/: mod.rs  null.rs  zero.rs
kernel/src/drivers/fs/: dev.rs  mod.rs  ram.rs
kernel/src/fs/: mod.rs  path.rs  registry.rs  vfs.rs
kernel/src/shell/: keyboard.rs  mod.rs  parser.rs
kernel/src/task/: executor.rs  mod.rs
kernel/src/util/: defer.rs  mod.rs  sync_cell.rs
