[package]
name = "riptide-os-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
x86_64 = "0.15.2"
static_cell = "2.1.0"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"
linked_list_allocator = "0.10.5"
